--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "twitter": "node twitter.js",
     "supabase": "node process-supabase.js",
+    "sheet": "node process-sheets.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,7 +15,10 @@
     "@supabase/supabase-js": "^1.11.8",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
+    "fs": "0.0.1-security",
+    "googleapis": "^39.2.0",
     "needle": "^2.6.0",
+    "readline": "^1.3.0",
     "twitter": "^1.7.1",
     "twitter-v2": "^1.1.0"
   }
