--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^8.2.0",
     "fs": "0.0.1-security",
     "googleapis": "^39.2.0",
+    "moment": "^2.29.1",
     "needle": "^2.6.0",
+    "node-telegram-bot-api": "^0.52.0",
     "readline": "^1.3.0",
     "twitter": "^1.7.1",
     "twitter-v2": "^1.1.0"
