--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "fs": "0.0.1-security",
+    "fs-extra": "^9.1.0",
     "googleapis": "^39.2.0",
+    "json2csv": "^5.0.6",
     "moment": "^2.29.1",
     "needle": "^2.6.0",
     "node-telegram-bot-api": "^0.52.0",
